# adventureformer

./: .gitignore  Cargo.toml  README.md  build.rs
af/: Cargo.toml  build.rs
af/src/: assets.rs  controls.rs  lib.rs  render.rs  vecmath.rs
af/src/assets/: macros.rs  mod.rs
asset-dev/: crattlecrute.blend  crattlecrute.blend1
asset-dev/crattlecrute/: idle-1.psd  idle1.pdn  idle1.psd  walk-1.psd  walk-2.pdn  walk-2.psd  walk-3.pdn  walk-3.psd  walk-4.pdn  walk-4.psd  walk-5.pdn  walk-5.psd  walk-6.pdn  walk-6.psd  walk-7.pdn  walk-7.psd  walk-8.pdn  walk-8.psd  walk1.pdn
csrc/: stb_image.c
src/: .main.rs.swp  linux.rs  main.rs  osx.rs  win32.rs
