[package]
name = "af"
version = "0.1.0"
authors = ["Resonious <metreckk@gmail.com>"]

build = "build.rs"

[lib]
name = "af"
crate-type = ["dylib"]

[build-dependencies]
gl_generator = "*"

[dependencies]
gl_common = "*"
libc = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"
default-features = false
